--- a/armenfinance/armenfinance/static/css/style.css
+++ b/armenfinance/armenfinance/static/css/style.css
@@ -2,7 +2,643 @@
 .flat {
     border-radius: 0;
 }
+/* 
+----------------------------
+       sam's styles
+----------------------------
+*/
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+body {
+    color: #343a40;
+    font-size: 14px;
+    height: 100%;
+    font-family: monospace;
+}
+
+/* login page file styling  */
+/* h3 {
+    color: #f5f5f5;
+} */
+
+#logo-column {
+    background: rgb(2,0,36);
+    background: linear-gradient(117deg, rgba(2,0,36,1) 0%, rgba(8,169,255,0.9640231092436975) 51%, rgba(0,212,255,1) 100%);
+}
+
+#form-column {
+    background-color: #f5f5f5;
+    color: rgb(2, 0, 36);
+}
+
+.card-body {
+    padding-bottom: 35px;
+   
+}
+
+.login-logo {
+    position: relative;
+    top: 110px;
+}
+
+/* Registration page file styling  */
+.registration-div {
+    margin-bottom: 30px;
+}
+.registration-card {
+    background-color: #f5f5f5;
+    color: rgb(2, 0, 36);
+    border-radius: 4px;
+    position: relative;
+    top: 10px;
+    margin: 4px;
+}
+
+.footer-note {
+    position: relative;
+    top:30px;
+}
+
+button {
+    background: linear-gradient(117deg, rgba(2,0,36,1) 0%, rgba(8,169,255,0.9640231092436975) 51%, rgba(0,212,255,1) 100%);
+    color: #f5f5f5;
+    cursor: pointer;
+}
+
+button:hover {
+    background: rgb(2,0,36);
+    background: linear-gradient(241deg, rgba(2,0,36,1) 0%, rgba(8,169,255,0.9640231092436975) 51%, rgba(0,212,255,1) 100%);
+}
+
+a {
+    text-decoration: none !important;
+}
+
+/* about section styling  */
+.about-armen {
+    font-size: 20px;
+    color: #343a40;
+}
+
+.about-img1, .about-img2, .about-img3 {
+    position: relative;
+    opacity: 0.70;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    background-attachment: fixed;
+}
+.about-img1 {
+    background-image: url(../img/pexels-pixabay-269077.jpg);
+    height: 500px;
+}
+
+.about-img2 {
+    background-image: url(../img/pexels-fauxels-3184433.jpg);
+    min-height: 400px;
+}
+
+.about-img3 {
+    background-image: url(../img/pexels-startup-stock-photos-7374.jpg);
+    min-height: 400px;
+
+}
+
+.section {
+    text-align: center;
+    padding: 50px 80px;
+}
+
+.section-light {
+    background-color: #f4f4f4;
+}
+
+.section-dark {
+    background-color: #282e34;
+    color: #f5f5f5;
+}
+
+.ptext {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    letter-spacing: 8px;
+    font-size: 27px;
+    text-transform: uppercase;
+}
+
+ .border {
+    background-color: #111;
+    color: #fff;
+    padding: 20px;
+}
+
+.trans {
+    background-color: transparent;
+    color: #008080;
+}
+
+/* contact section styling  */
+.contact-img1 {
+    background-image: url('../img/pexels-snapwire-618613.jpg');
+    height: 600px;
+}
+
+.contact-img2 {
+    background-image: url('../img/pexels-andrea-piacquadio-3769021\ \(2\).jpg');
+    min-height: 600px;
+}
+
+.contact-img3 {
+    background-image: url('../img/pexels-andrea-piacquadio-840996.jpg');
+    min-height: 600px;
+}
+
+.contact-img1, .contact-img2, .contact-img3 {
+    position: relative;
+    opacity: 0.70;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    background-attachment: fixed;
+}
+
+.contact-form {
+    background-image: url('../img/undraw_contact_us_15o2.svg');
+    color: #111;
+}
+
+@media only screen and (max-width: 600px) {
+
+    body {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+
+    /* home-banner  */
+    .home-banner {
+        background-position: center;
+        background-size: cover;
+    }
+    /* map image  */
+
+    .map-img {
+        width: 60%;
+        margin-left: -86px
+    }
+    /* <!-- choose what's right for you section --> */
+    .choose-wrfy-header {
+        font-size: 20px;
+        font-family: 500;
+        text-align: center;
+    }
+    /* <!--about manager --> */
+    .manager {
+        display: block;
+        padding: 0px;
+        margin-bottom: 50px;
+    }
+
+    .manager-heading {
+        position: relative;
+        left: 3px;
+    } 
+
+    .manager-div {
+        box-shadow: rgba(216, 216, 216, 0.78) 5px 10px 10px 0px;
+        margin: 20px 60px;
+    }
+
+    .manager-para {
+        padding-bottom: 2px;
+        padding: 0px 30px;
+        margin: 10px 0px;
+    }
+
+    .manager-team {
+        min-width: 320px;
+        width: 70%;
+        margin-left: 18%;
+    }
+    .sign-img {
+        margin-left: 100px;
+        padding: 0;
+    }
+
+    /* gallery  */
+    .gallery {
+        position: relative;
+        align-items: center;
+        justify-items: center;
+        margin-left: 18px;
+        padding: 0;
+    }
+
+    .gallery-section_1 {
+        position: relative;
+        left: 20px;
+    }
+
+    /* testimonials  */
+    .testimonials-msg {
+        position: relative;
+        margin-left: -10px;
+    }
+
+    
+    .img-te1, .img-te2, .img-te3 {
+    position: relative;
+    margin-left: 100px;
+    left: 89px;
+    border-radius: 50%;
+    }
+
+    .img-te4 {
+        position: relative;
+        margin-left: 80px;
+        width: 31%;
+    }
+
+    /* style css class  */
+    #unltd-comm-header {
+        font-size: 25px;
+    }
+
+    #unltd-comm-body {
+        font-size: 18px;
+    }
+/* unlimited commission-free online trade  */
+    #unltd-comm-body {
+        font-size: 15px;
+        padding: 0px 20px;
+        margin: 0px 3px;
+    }
+
+    #start-0-investing > img {
+        width: 100%;
+        margin-left: 10px;
+    }
+
+    .unltd-comm-btn {
+        margin-left: 40px;
+        position: relative;
+        left: 40px;
+    }
+}
+
+@media only screen and (min-width: 320px) {
+    /* manager  */
+    .manager-team {
+        min-width: 320px;
+    }
+
+    .sign-img {
+        margin-left: 25px;
+    }
+
+    .img-te1, .img-te2, .img-te3 {
+        position: relative;
+        margin-left: 0px;
+        left: 85px;
+        border-radius: 50%;
+    }
+
+    .img-te4 {
+        position: relative;
+        margin-left: -18px;
+        width: 50%;
+    }
+
+    .map-img {
+        width: 60%
+    }
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+body {
+    color: #343a40;
+    font-size: 14px;
+    height: 100%;
+    font-family: monospace;
+}
+
+/* login page file styling  */
+/* h3 {
+    color: #f5f5f5;
+} */
+
+#logo-column {
+    background: rgb(2,0,36);
+    background: linear-gradient(117deg, rgba(2,0,36,1) 0%, rgba(8,169,255,0.9640231092436975) 51%, rgba(0,212,255,1) 100%);
+}
+
+#form-column {
+    background-color: #f5f5f5;
+    color: rgb(2, 0, 36);
+}
+
+.card-body {
+    padding-bottom: 35px;
+   
+}
+
+.login-logo {
+    position: relative;
+    top: 110px;
+}
+
+/* Registration page file styling  */
+.registration-div {
+    margin-bottom: 30px;
+}
+.registration-card {
+    background-color: #f5f5f5;
+    color: rgb(2, 0, 36);
+    border-radius: 4px;
+    position: relative;
+    top: 10px;
+    margin: 4px;
+}
+
+.footer-note {
+    position: relative;
+    top:30px;
+}
+
+button {
+    background: linear-gradient(117deg, rgba(2,0,36,1) 0%, rgba(8,169,255,0.9640231092436975) 51%, rgba(0,212,255,1) 100%);
+    color: #f5f5f5;
+    cursor: pointer;
+}
+
+button:hover {
+    background: rgb(2,0,36);
+    background: linear-gradient(241deg, rgba(2,0,36,1) 0%, rgba(8,169,255,0.9640231092436975) 51%, rgba(0,212,255,1) 100%);
+}
+
+a {
+    text-decoration: none !important;
+}
+
+/* about section styling  */
+.about-armen {
+    font-size: 20px;
+    color: #343a40;
+}
+
+.about-img1, .about-img2, .about-img3 {
+    position: relative;
+    opacity: 0.70;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    background-attachment: fixed;
+}
+.about-img1 {
+    background-image: url(../img/pexels-pixabay-269077.jpg);
+    height: 500px;
+}
+
+.about-img2 {
+    background-image: url(../img/pexels-fauxels-3184433.jpg);
+    min-height: 400px;
+}
+
+.about-img3 {
+    background-image: url(../img/pexels-startup-stock-photos-7374.jpg);
+    min-height: 400px;
+
+}
+
+.section {
+    text-align: center;
+    padding: 50px 80px;
+}
+
+.section-light {
+    background-color: #f4f4f4;
+}
+
+.section-dark {
+    background-color: #282e34;
+    color: #f5f5f5;
+}
+
+.ptext {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    letter-spacing: 8px;
+    font-size: 27px;
+    text-transform: uppercase;
+}
+
+ .border {
+    background-color: #111;
+    color: #fff;
+    padding: 20px;
+}
+
+.trans {
+    background-color: transparent;
+    color: #008080;
+}
+
+/* contact section styling  */
+.contact-img1 {
+    background-image: url('../img/pexels-snapwire-618613.jpg');
+    height: 600px;
+}
+
+.contact-img2 {
+    background-image: url('../img/pexels-andrea-piacquadio-3769021\ \(2\).jpg');
+    min-height: 600px;
+}
+
+.contact-img3 {
+    background-image: url('../img/pexels-andrea-piacquadio-840996.jpg');
+    min-height: 600px;
+}
+
+.contact-img1, .contact-img2, .contact-img3 {
+    position: relative;
+    opacity: 0.70;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    background-attachment: fixed;
+}
+
+.contact-form {
+    background-image: url('../img/undraw_contact_us_15o2.svg');
+    color: #111;
+}
+
+@media only screen and (max-width: 600px) {
+
+    body {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+
+    /* home-banner  */
+    .home-banner {
+        background-position: center;
+        background-size: cover;
+    }
+    /* map image  */
+/* 
+    .map-img {
+        width: 60%;
+        margin-left: -86px
+    } */
+    /* <!-- choose what's right for you section --> */
+    .choose-wrfy-header {
+        font-size: 20px;
+        font-family: 500;
+        text-align: center;
+    }
+    /* <!--about manager --> */
+    .manager {
+        display: block;
+        padding: 0px;
+        margin-bottom: 50px;
+    }
+
+    .manager-heading {
+        position: relative;
+        left: 3px;
+    } 
+
+    .manager-div {
+        box-shadow: rgba(216, 216, 216, 0.78) 5px 10px 10px 0px;
+        margin: 20px 60px;
+    }
+
+    .manager-para {
+        padding-bottom: 2px;
+        padding: 0px 30px;
+        margin: 10px 0px;
+    }
+
+    .manager-team {
+        min-width: 320px;
+        width: 70%;
+        margin-left: 18%;
+    }
+    .sign-img {
+        margin-left: 100px;
+        padding: 0;
+    }
+
+    /* gallery  */
+    .gallery {
+        position: relative;
+        align-items: center;
+        justify-items: center;
+        margin-left: 18px;
+        padding: 0;
+    }
+
+    .gallery-section_1 {
+        position: relative;
+        left: 20px;
+    }
+
+    /* testimonials  */
+    .testimonials-msg {
+        position: relative;
+        margin-left: -10px;
+    }
+
+    
+    .img-te1, .img-te2, .img-te3 {
+    position: relative;
+    margin-left: 100px;
+    left: 89px;
+    border-radius: 50%;
+    }
+
+    .img-te4 {
+        position: relative;
+        margin-left: 80px;
+        width: 31%;
+    }
+
+    /* style css class  */
+    #unltd-comm-header {
+        font-size: 25px;
+    }
+
+    #unltd-comm-body {
+        font-size: 18px;
+    }
+/* unlimited commission-free online trade  */
+    #unltd-comm-body {
+        font-size: 15px;
+        padding: 0px 20px;
+        margin: 0px 3px;
+    }
+
+    #start-0-investing > img {
+        width: 100%;
+        margin-left: 10px;
+    }
+
+    .unltd-comm-btn {
+        margin-left: 40px;
+        position: relative;
+        left: 40px;
+    }
+}
+
+@media only screen and (min-width: 320px) {
+    /* manager  */
+    .manager-team {
+        min-width: 320px;
+    }
+
+    .sign-img {
+        margin-left: 25px;
+    }
+
+    .img-te1, .img-te2, .img-te3 {
+        position: relative;
+        margin-left: 0px;
+        left: 85px;
+        border-radius: 50%;
+    }
+
+    .img-te4 {
+        position: relative;
+        margin-left: -18px;
+        width: 50%;
+    }
+
+    .map-img {
+        width: 60%
+    }
+}
 
 /* desktop view */
 @media only screen and (min-width: 800px){
@@ -10,61 +646,55 @@
         display: none;
     }
     /* home page styling */
-    /* navigation */
-    .navigation {
-        background: linear-gradient(to bottom,rgba(0,0,0,1) 0%,rgba(0,0,0,0.7) 50%,rgba(0,0,0,0) 100%);
-        padding: 1.3rem 0;
-        padding-top: 2.2rem;
-        /* height: 300px; */
-    }
-    .navigation-fixed {
-        background: linear-gradient(to bottom,rgba(0, 0, 139,1) 0%,rgba(0, 0, 139,0.9) 86%,rgba(0, 0, 139,0) 100%);
-        padding-bottom: 2rem;
-        /* background: rgb(0, 0, 139); */
-        width: 100%;
-        position: fixed;
-        z-index:10;
-        transition: 1s width ease-in-out ;
-    }
-
-    #nav-menu-icon {
-        font-size: 1.5rem;
-        margin-top: 14%;
-    }
-    #open-account-nav {
-        margin-top: 0.6rem;
-    }
-    #open-account-nav > a {
-        color: white;
-    }
-
-    #logo-nav > img {
-        width:50%;
-        height: auto;
-        margin-left:40%;
-    }
-
-    #about-us-nav {
-        margin-top: 1%;
-        padding-left: 17%;
-    }
-    #about-us-nav > a {
-        color: white;
-        padding-right: 1.5rem;
-    }
-
-    /* banner */
-    .home-banner {
-    /* background-color: #0056A9; */
-    /* background: linear-gradient(71deg, rgba(0,169,166,1) 13%, rgba(0,86,169,1) 61%, rgba(0,3,169,1) 93%); */
-    background: url('../img/banner-wallpaper.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    color: white;
-    background-color: rgba(200,100,0,.5);
-    background-blend-mode: multiply;
+/* navigation */
+.navigation {
+    background: linear-gradient(to bottom,rgba(0,0,0,1) 0%,rgba(0,0,0,0.7) 50%,rgba(0,0,0,0) 100%);
+    padding: 1.3rem 0;
+    padding-top: 2.2rem;
     /* height: 300px; */
+}
+.navigation-fixed {
+    background: linear-gradient(to bottom,rgba(0, 0, 139,1) 0%,rgba(0, 0, 139,0.9) 86%,rgba(0, 0, 139,0) 100%);
+    padding-bottom: 2rem;
+    /* background: rgb(0, 0, 139); */
+    width: 100%;
+    position: fixed;
+    z-index:10;
+    transition: 1s width ease-in-out ;
+}
+
+#nav-menu-icon {
+    font-size: 1.5rem;
+    margin-top: 14%;
+}
+#open-account-nav {
+    margin-top: 0.6rem;
+}
+#open-account-nav > a {
+    color: white;
+}
+
+#logo-nav > img {
+    width:50%;
+    height: auto;
+    margin-left:40%;
+}
+
+#about-us-nav {
+    margin-top: 1%;
+    padding-left: 17%;
+}
+#about-us-nav > a {
+    color: white;
+    padding-right: 1.5rem;
+}
+
+/* banner */
+.home-banner {
+    background: url('/armen-finance/static/img/banner-wallpaper.jpg');
+    width: 100%;
+    color: #ddd;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .home-login-bg {
@@ -89,17 +719,13 @@
 /* create account banner */
 #create-account-banner > h3{
     margin-top: 5rem;
-    font-size: 1.9rem;
+    font-size: 3rem;
     font-weight: bold;
-    color: rgb(82, 59, 32);
-    text-shadow: 2px 4px rgba(232, 230, 230, 0.75);
 }
 #create-account-banner > p{
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     font-weight: 300;
     margin: 2rem 0;
-    color: rgb(82, 59, 32);
-    text-shadow: 2px 4px rgba(232, 230, 230, 0.75);
 }
 
 #create-account-banner > a {
@@ -110,16 +736,13 @@
     text-align: right;
 }
 #promotional-offer-banner > h3 {
-    margin-top: 5.1rem;
-    font-size: 2.0rem;
+    margin-top: 8.4rem;
+    font-size: 2.9rem;
     text-align: right;
-    color: rgb(82, 59, 32);
-    text-shadow: 2px 4px rgba(232, 230, 230, 0.75);
 }
 #promotional-offer-banner > span {
     font-size: 2.4rem;
-    color: rgb(82, 59, 32);
-    text-shadow: 2px 4px rgba(232, 230, 230, 0.75);
+    /* text-align: right; */
 }
 /* choose what's right for you  */
 .choose-wrfy-header {
@@ -140,11 +763,11 @@
     top: -32%;
 }
 .owl-prev > span{
-    left: -5%;
+    left: 0%;
 }
 
 .owl-next > span{
-    right: -5%;
+    right: 0%;
 }
 .owl-next > span:hover, .owl-prev > span:hover {
     color: blue;
@@ -187,6 +810,7 @@
     color: white;
     margin: 0.6rem 0;
 }
+
 /* dashboard */
 .savings-amount {
     color: white;
@@ -255,6 +879,17 @@
 
 }
 
+
+
+
+
+
+
+
+
+
+
+
 /* mobile view */
 @media only screen and (max-width: 800px){
     .desktop {
@@ -311,6 +946,7 @@
     /* background: linear-gradient(71deg, rgba(0,169,166,1) 13%, rgba(0,86,169,1) 61%, rgba(0,3,169,1) 93%); */
     background: url('../img/banner-wallpaper-mobile.jpg') no-repeat;
     height: 100%;
+    
     width: 100%;
     color: white;
     /* height: 300px; */
@@ -433,35 +1069,8 @@
     color: white;
     margin: 0.6rem 0;
 }
-/* dashboard */
-.savings-amount {
-    color: white;
-    font-weight: bold;
-    font-size: 3.5rem;
-    margin: 4rem 0;
-}
 
-/* email sent */
-.mail-sent-img{
-    width: 50%;
-    margin: 0 24%;
-}
-
-.mail-sent-container{
-    margin-top: 12%;
-}
-
-.mail-sent-container > h3 {
-    font-size: 250% !important; 
-    margin: 3%;
-    letter-spacing: 2%;
-}
-
-.mail-sent-container > p {
-    font-size: 112%;
-}
-
-/* home page side navbar */
+/* homepage sidebar */
 
 .sidenav {
     height: 100%;
@@ -499,5 +1108,61 @@
     margin-left: 50px;
   }
 
-
 }
+
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+
+
+  .overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+  }
+  
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+  }
+  
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+    }
+  }
